--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,7 +14,7 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["@rescript/react"],
   "warnings": {
     "error": "+101"
   }
