--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,13 +4,13 @@
   "reason": {
     "react-jsx": 3
   },
-  "version": "0.4.0",
+  "version": "0.5.0",
   "sources": {
     "dir": "src",
     "subdirs": true
   },
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
