--- a/package.json
+++ b/package.json
@@ -2,32 +2,25 @@
   "name": "@bettercart/rescript-headless-ui-react",
   "repository": "https://github.com/bettercart/rescript-headless-ui-react.git",
   "homepage": "https://www.getbettercart.com",
-  "version": "0.4.0",
-  "scripts": {
-    "re:clean": "bsb -clean-world",
-    "re:build": "bsb -make-world",
-    "re:watch": "bsb -make-world -w"
-  },
+  "version": "0.5.0",
   "keywords": [
     "rescript",
     "TailwindCSS",
     "Headless UI",
     "Tailwind"
   ],
-  "optionalDependencies": {},
   "author": "Better Cart Inc",
   "license": "MIT",
-  "dependencies": {
-    "@headlessui/react": "^0.2.0"
+  "scripts": {
+    "res:build": "rescript",
+    "res:clean": "rescript clean",
+    "res:start": "rescript build -w"
   },
-  "peerDependencies": {
-    "@rescript/react": "^0.10.1",
-    "bs-platform": "^9.0.1",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2"
+  "dependencies": {
+    "@headlessui/react": "^1.4.2"
   },
   "devDependencies": {
-    "@rescript/react": "^0.10.1",
-    "bs-platform": "^9.0.1"
+    "rescript": "9.1.4",
+    "@rescript/react": "^0.10.3"
   }
 }
